--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,20 @@
-<p>big-card works!</p>
+<div class="container__big-card">
+    
+    <div class="big-card__photo">
+        <img 
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZfbRia-RHZbVqF8xyS8XHQzM9g-7wQSCk4Q&s" 
+        alt="" 
+        height="200px"
+        
+        srcset="">
+    </div>
+    <div class="big-card__title">
+        <h1><a href="#">Conteúdo para todos os tipos de Devs!</a></h1>
+
+    </div>
+    <div class="big-card__description">
+        <p>Apreendendo HTML! </p>
+
+    </div>
+       
+</div>
