--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,18 @@
-<p>small-card works!</p>
+<div class="container__small-card">
+
+    <div class="container__small-card-content">
+        <div class="small-card__photo">
+            <img 
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYOVDGyL57icWm-xJImvWb2FCrw7c5HmRgg&s" 
+            alt="" 
+            srcset="">
+        </div>
+
+        <div class="small-card__title">
+            <h1><a href="#">Conteúdo para todos os tipos de Devs!</a></h1>
+        </div>
+    </div>
+    <div class="container__small-card__separator">
+        <hr/>  
+    </div>
+</div>
