--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,10 @@
     padding: 0;
     box-sizing: border-box;
     background-color: #111111;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a{
+    text-decoration: none;
 }
