--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,11 +6,37 @@
 <app-menu-title></app-menu-title>
 <div class="conteiner__articles">
     <div class="articles__main">
-        <app-big-card></app-big-card>
+        <app-big-card 
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZfbRia-RHZbVqF8xyS8XHQzM9g-7wQSCk4Q&s" 
+        cardTitle="Conteúdo para todos os tipos de Devs!"
+        cardDescription="Apreendendo HTML! "
+        >
+        </app-big-card>
+        
+        <app-big-card 
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4cAvXHYM92e_GGblGU3Qp625K-R-EkLXRbA&s" 
+        cardTitle="Conteúdo de HTML para Devs iniciantes !"
+        cardDescription="Iniciante apreendendo HTML! "
+        >
+        </app-big-card>
+        
+
+
+
     </div>
     <div class="articles__others">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZYOVDGyL57icWm-xJImvWb2FCrw7c5HmRgg&s"
+        cardTitle="Conteúdo para todos os tipos de Devs!"
+        >
+        </app-small-card>
+        <app-small-card
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSpJVDWvtRnLzTWuu9MUBT-Isp9XTmmS3x_qg&s"
+        cardTitle="Melhores conteúdos de HTML"
+        ></app-small-card>
+        <app-small-card
+        photoCover="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTD9BwaN-pzQEjc2e-AOPz0YUOssMierVD8IA&s"
+        cardTitle="implantação de CSS e JS."
+        ></app-small-card>
     </div>
 </div>
