--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,31 +1,44 @@
 .container__big-card{
-    margin-left: 20px;
-    margin-right: 10px;
+
     margin-top: 30px;
-
-    width: 50%;
-    height: 300px;
-
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 40px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-}
-
-.big-card__title > h1{
+  
+    @media(min-width: 700px) {
+      width: 200px;
+      margin-bottom: 0;
+    }
+    @media(min-width: 1000px) {
+      width: 400px;
+    }
+  }
+  
+  .big-card__title > h1  {
     margin-top: 15px;
-    font-size: 30px;
-}
-
-.big-card__description > p{
-    margin-top: 10px;
-    color: gray;
-    font-size: 30px;
-    
-}
-
-.big-card__photo > img{
+    font-size: 20px;
+  }
+  
+  .big-card__description{
+    margin-top: 20px;
+  }
+  
+  .big-card__description > p > a {
+    color: grey;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  }
+  
+  .big-card__photo > img{
     width: 100%;
-    min-width: 500px;
-    min-height: 400px;
-}
+    height: auto;
+    @media(min-width: 700px) {
+      min-width: 200px;
+    }
+    @media(min-width: 1000px) {
+      min-width: 400px;
+    }
+  }
